# PacMan-3D

./: CMakeLists.txt  README.md  gitignore_global  main.cpp
Final/TP_template/: main2.cpp
Final/TP_template/shaders/: normals.fs.glsl
Final/glimac/include/Classe/: Fantome.h  Interface.h  Mur.hpp  Nourriture.h  OGL3.hpp  PacMan.h  Personnage.h  Terrain.h
Final/glimac/src/Classe/: Coordonnee.cpp  Fantome.cpp  Interface.cpp  Item.cpp  OGL3.cpp  PacMan.cpp  Personnage.cpp  Terrain.cpp
TP_template/: SDLtemplate.cpp
glimac/include/glimac/: Interface.hpp  OGL3.hpp  Objet.hpp
includes/: Coordonnee.h  Fantome.h  FantomeBleu.h  FantomeJaune.h  FantomeRose.h  FantomeRouge.h  Fruit.h  Gomme.h  Interface.h  Item.h  Nourriture.h  PacMan.h  Personnage.h  SuperGomme.h  Terrain.h
src/: Coordonnee.cpp  Fantome.cpp  FantomeBleu.cpp  FantomeJaune.cpp  FantomeRose.cpp  FantomeRouge.cpp  Fruit.cpp  Gomme.cpp  Interface.cpp  Item.cpp  Nourriture.cpp  PacMan.cpp  Personnage.cpp  SuperGomme.cpp  Terrain.cpp
structure/PROJET V3/TP_template/: main2.cpp
structure/PROJET V3/glimac/include/Classe/: Fantome.h  PacMan.h  Terrain.h
structure/PROJET V3/glimac/src/Classe/: Fantome.cpp  Item.cpp  Personnage.cpp  Terrain.cpp
structure/PROJET V4/TP_template/: main2.cpp
structure/PROJET V4/glimac/include/Classe/: Fantome.h  (+3 more)
structure/TP_template/: main2.cpp
structure/glimac/include/Classe/: Fantome.h  Item.h  Nourriture.h  OGL3.hpp  PacMan.h  Personnage.h  Terrain.h
structure/glimac/src/Classe/: Fantome.cpp  Item.cpp  Nourriture.cpp  OGL3.cpp  PacMan.cpp  Personnage.cpp  Terrain.cpp
(+9 files in other folders)
